--- a/myproject/DrunkMe/templates/detail.html
+++ b/myproject/DrunkMe/templates/detail.html
@@ -81,6 +81,10 @@ label.star:hover { transform: rotate(-15deg) scale(1.3); }
 label.star:before {
   content: '\2605';
 }
+
+textarea {
+   resize: none;
+}
 </style>
 </head>
 <body>
@@ -113,26 +117,36 @@ label.star:before {
 <p>Rating : {{detail.rating}}</p>
 <p>Phone : {{detail.phone}}</p>
 <a href='{% url 'menu' detail.id  %}'>
-<button class="button" style="vertical-align:middle"><span>Menu</span></button>
+<button class="button" style="vertical-align:middle" ><span>Menu</span></button>
 </a>
-<p>
-<div class="stars">
-  <form method="POST">
-    <input class="star star-5" id="star-5" type="radio" name="star"  value="5" onclick="postToController();"/>
-    <label class="star star-5" for="star-5"></label>
-    <input class="star star-4" id="star-4" type="radio" name="star"  value="4" onclick="postToController();"/>
-    <label class="star star-4" for="star-4"></label>
-    <input class="star star-3" id="star-3" type="radio" name="star"  value="3" onclick="postToController();"/>
-    <label class="star star-3" for="star-3"></label>
-    <input class="star star-2" id="star-2" type="radio" name="star"  value="2" onclick="postToController();"/>
-    <label class="star star-2" for="star-2"></label>
-    <input class="star star-1" id="star-1" type="radio" name="star"  value="1" onclick="postToController();"/>
-    <label class="star star-1" for="star-1"></label>
-  </form>
-</div>
-</p>
 </center>
 
+<center>
+
+<hr>
+<div class="fb-like" data-href="{{request.build_absolute_uri}}" data-layout="button_count" data-action="like" data-size="small"data-show-faces="true" data-share="true"></div>
+</center>
+<center>
+<div class="fb-comments" data-href="{{request.build_absolute_uri}}" data-numposts="5">
+</div>
+</center>
+
+
+
+
+
+
+
+
+<div id="fb-root"></div> 
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v2.9&appId=1454374121285668";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
 
 
 <script>
@@ -151,15 +165,17 @@ function carousel() {
     setTimeout(carousel, 2500);    
 }
 
-function postToController() {
+function rating() {
         for (i = 0; i < document.getElementsByName('star').length; i++) {
                 if(document.getElementsByName('star')[i].checked == true) {
                     var ratingValue = document.getElementsByName('star')[i].value;
-                    break;
+                     break;
                 }
         }
-        alert(ratingValue);
+        
+        alert("Rating : " + ratingValue);
 }
+
 </script>
 
 
