--- a/myproject/DrunkMe/templates/home.html
+++ b/myproject/DrunkMe/templates/home.html
@@ -8,10 +8,16 @@
 
 
 <body>
-
-
 <div class="w3-container">
-  <h2>DRUNKME&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>&ensp;&ensp;&ensp;<a href="login">Admin Login</a></h2>
+  <h1 style="display:inline">DRUNKME&nbsp;</h1>
+  {% if request.user.is_active %}
+  <p style="display:inline">Connect as {{ user.username }} </p>
+  <p style="display:inline"><a href='{% url 'logout' %}'>Logout</a></p>
+  {% else %}
+  <p style="display:inline"><a href='{% url 'login' %}'>Login</a></p>  
+  {% endif %}
+
+  
   <div class="w3-row">
     <a href="javascript:void(0)" onclick="Home(event, 'Event');">
       <div class="w3-third tablink w3-bottombar w3-hover-light-grey w3-padding">EVENT</div>
@@ -27,11 +33,12 @@
   <div id="Event" class="w3-container city" style="display:none">
     <center>
     {% for i in event %}
+    <h2>{{i.name}}</h2>
     <a href='{% url 'event' i.id %}'>
     <img src="{{i.image.url}}" height="300" width="500" >
     </a>  
-    <h2>{{ i.name}}</h2>
-    <p>{{ i.content}}</p>
+    <p>Content : {{i.content}}</p>
+    <p>___________________________________________________________</p>
     {% endfor %}
     </center>
   </div>
@@ -40,11 +47,12 @@
     <center>
     {% for i in bar %}
     {% if i.promotion %}
+    <h2>{{ i.name}}</h2>
     <a href='{% url 'detail' i.id  %}'>
     <img src="{{i.logo.url}}" height="300" width="500">
     </a>
-    <h2>{{ i.name}}</h2>
-    <p>{{ i.promotion}}</p>
+    <p>Promotion : {{ i.promotion}}</p>
+    <p>___________________________________________________________</p>
     {% endif %}
     {% endfor %}
     </center>
@@ -54,11 +62,12 @@
     <center>
     {% for i in bar %}
     {% if i.happyhours %}
+    <h2>{{ i.name}}</h2>
     <a href='{% url 'detail' i.id  %}'>
     <img src="{{i.logo.url}}" height="300" width="500">
     </a>
-    <h2>{{ i.name}}</h2>
-    <p>{{ i.happyhours}}</p>
+    <p>Happyhours : {{ i.happyhours}}</p>
+    <p>___________________________________________________________</p>
     {% endif %}
     {% endfor %}
     </center>
