--- a/myproject/DrunkMe/templates/nearby.html
+++ b/myproject/DrunkMe/templates/nearby.html
@@ -1,19 +1,96 @@
-<!DOCTYPE html>
+<!DocType html>
 <html>
-<head>
-<title>Event</title>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      }
+      #map {
+      width: 100%;
+      height: 100%;
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script>
+      var map;
+      var infowindow;
+      var service;
 
-</head>
-<body>
+      function initMap() {
+          var pos = {
+              lat: 13.7539800,
+              lng: 100.5014400
+          };
+          map = new google.maps.Map(document.getElementById('map'), {
+              center: pos,
+              zoom: 12
+          });
 
-<center>
-<form method ='GET' action =''>
-<input type='text' name ='search' placeholder = 'ค้นหาร้านที่ต้องการ' value='{{ request.GET.search }}'/>
-<input type='submit' value = 'Search'/>
-</form>
-<p>get location</p>
-</center>
+          var marker = new google.maps.Marker({
+              position: pos,
+              map: map,
+              title: 'Messiah College'
+          });
+
+          var request = {
+              location: pos,
+              radius: 10000,
+              type: ['lodging']
+          }
+          infowindow = new google.maps.InfoWindow();
+          service = new google.maps.places.PlacesService(map);
+          service.nearbySearch(request, callback);
 
 
-</body>
+      }
+
+      function callback(results, status) {
+          if (status === google.maps.places.PlacesServiceStatus.OK) {
+            results.forEach(createMarker);
+          }
+      }
+
+      function createMarker(place) {
+          var placeLoc = place.geometry.location;
+          var marker = new google.maps.Marker({
+              map: map,
+              icon: {
+                  url: 'https://lh5.ggpht.com/2DuavzbIMeVwlkHwI2LlZye3cGrZdvySutMlin886OB86mpm55L_zJOLs22RiDsrfg=w300',
+                  anchor: new google.maps.Point(10, 10),
+                  scaledSize: new google.maps.Size(30, 35)
+              },
+              position: place.geometry.location
+          });
+          marker.addListener('click', function() {
+
+            var request = {
+                reference: place.reference
+            };
+            service.getDetails(request, function(details, status) {
+
+              infowindow.setContent([
+                details.name,
+                details.formatted_address,
+                details.website,
+                details.rating,
+                details.formatted_phone_number].join("<br />"));
+              infowindow.open(map, marker);
+            });
+
+          })
+      }
+      window.onload = initMap;
+
+    </script>
+  </head>
+  <body>
+    <div id="map"></div>
+  </body>
 </html>
+
+<!--AIzaSyCh8DHLHXyT1Aqsa70i9aUHYg6VxoingjA
+center: {lat: 13.7539800, lng: 100.5014400},-->
